address illegal reflection warning when tests are executed