@@ -96,6 +96,16 @@
                 <artifactId>sonar-maven-plugin</artifactId>
                 <version>3.2</version>
             </plugin>
+
+            <!-- address illegal reflection warning when tests are executed -->
+            <plugin>
+                <groupId>org.apache.maven.plugins</groupId>
+                <artifactId>maven-surefire-plugin</artifactId>
+                <version>2.9</version>
+                <configuration>
+                    <argLine>--add-opens java.base/java.lang=ALL-UNNAMED</argLine>
+                </configuration>
+            </plugin>
         </plugins>
     </build>
 
